; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_test_is_ipaddr.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_test_is_ipaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"www.google.com\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"www.google.com.\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"www\00", align 1
@.str.3 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"123\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"1.1.1.1\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"2001:db8::2:1\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_is_ipaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_is_ipaddr() #0 {
  %1 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  %5 = call i32 @ok(i32 %4)
  %6 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @ok(i32 %9)
  %11 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i32 @ok(i32 %14)
  %16 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.3, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @ok(i32 %19)
  %21 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  %25 = call i32 @ok(i32 %24)
  %26 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %27 = call i32 @ok(i32 %26)
  %28 = call i32 @ptls_server_name_is_ipaddr(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0))
  %29 = call i32 @ok(i32 %28)
  ret void
}

declare dso_local i32 @ok(i32) #1

declare dso_local i32 @ptls_server_name_is_ipaddr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
